[gd_scene load_steps=77 format=2]

[ext_resource path="res://Scripts/Fade.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Raw/SmallPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Anims/AFade.tres" type="Animation" id=3]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=4]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA1.png" type="Texture" id=5]
[ext_resource path="res://Scripts/MenuUI.gd" type="Script" id=6]
[ext_resource path="res://Scripts/StartUI.gd" type="Script" id=7]
[ext_resource path="res://Scenes/GameTitle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/GWOutline.png" type="Texture" id=9]
[ext_resource path="res://Scripts/DevCam.gd" type="Script" id=10]
[ext_resource path="res://Sprites/Sound_On.png" type="Texture" id=11]
[ext_resource path="res://Scripts/BGAnim.gd" type="Script" id=12]
[ext_resource path="res://Scripts/SoundSet.gd" type="Script" id=13]
[ext_resource path="res://Sprites/LPoint.png" type="Texture" id=14]
[ext_resource path="res://Sprites/RPoint.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Sound_Off.png" type="Texture" id=16]
[ext_resource path="res://Scripts/PlayersChoose/ChoosePlayers.gd" type="Script" id=17]
[ext_resource path="res://Scripts/LBut.gd" type="Script" id=18]
[ext_resource path="res://Scripts/RBut.gd" type="Script" id=19]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA3.png" type="Texture" id=20]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA17.png" type="Texture" id=21]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA22.png" type="Texture" id=22]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA24.png" type="Texture" id=23]
[ext_resource path="res://Sprites/TextOff.png" type="Texture" id=24]
[ext_resource path="res://Sprites/InfoBut.png" type="Texture" id=25]
[ext_resource path="res://Scripts/InfoBut.gd" type="Script" id=26]
[ext_resource path="res://Sprites/GameListOn.png" type="Texture" id=27]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA16.png" type="Texture" id=28]
[ext_resource path="res://Scripts/GameList.gd" type="Script" id=29]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA8.png" type="Texture" id=30]
[ext_resource path="res://Sprites/GameListOff.png" type="Texture" id=31]
[ext_resource path="res://Sprites/InfoButOn.png" type="Texture" id=32]
[ext_resource path="res://Sprites/GameInfo.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Game3.png" type="Texture" id=34]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA25.png" type="Texture" id=35]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA6.png" type="Texture" id=36]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA26.png" type="Texture" id=37]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA5.png" type="Texture" id=38]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA27.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Game1InfoPlayers.png" type="Texture" id=40]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA20.png" type="Texture" id=41]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA21.png" type="Texture" id=42]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA9.png" type="Texture" id=43]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA19.png" type="Texture" id=44]
[ext_resource path="res://Scripts/Switch.gd" type="Script" id=45]
[ext_resource path="res://SoundEffects/StartUI.wav" type="AudioStream" id=46]
[ext_resource path="res://SoundEffects/InfoPop.wav" type="AudioStream" id=47]
[ext_resource path="res://SoundEffects/InfoHide.wav" type="AudioStream" id=48]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA10.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Game2.png" type="Texture" id=50]
[ext_resource path="res://Songs/LoFiSongBG.wav" type="AudioStream" id=51]
[ext_resource path="res://SoundEffects/SwapGame.wav" type="AudioStream" id=52]
[ext_resource path="res://SoundEffects/Zoom.wav" type="AudioStream" id=53]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA14.png" type="Texture" id=54]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA13.png" type="Texture" id=55]
[ext_resource path="res://SoundEffects/Move.wav" type="AudioStream" id=56]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA7.png" type="Texture" id=57]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA15.png" type="Texture" id=58]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA4.png" type="Texture" id=59]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA12.png" type="Texture" id=60]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA18.png" type="Texture" id=61]
[ext_resource path="res://SoundEffects/Sel1.wav" type="AudioStream" id=62]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA23.png" type="Texture" id=67]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA11.png" type="Texture" id=71]
[ext_resource path="res://Sprites/FlapsAnim/FlapsA2.png" type="Texture" id=74]

[sub_resource type="Animation" id=6]
resource_name = "BGAnim"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.411765, 0.580392, 0.741176, 1 ), Color( 0.411765, 0.580392, 0.741176, 1 ), Color( 0.337255, 0.486275, 0.713726, 1 ), Color( 0.298039, 0.447059, 0.670588, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.411765, 0.580392, 0.741176, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Flapps"
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 37.6, 38.1, 38.6, 39.1, 39.6, 40.1, 40.6, 41.1, 41.6, 42.1, 42.6, 43.1, 43.6, 44.1, 44.6, 45.1, 45.6, 46.1, 46.6, 47.1, 47.6, 48.1, 48.6, 49.1, 49.6, 50.1, 50.6, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 39 ), ExtResource( 5 ), ExtResource( 74 ), ExtResource( 20 ), ExtResource( 59 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 57 ), ExtResource( 30 ), ExtResource( 43 ), ExtResource( 49 ), ExtResource( 71 ), ExtResource( 60 ), ExtResource( 55 ), ExtResource( 54 ), ExtResource( 58 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 61 ), ExtResource( 44 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 22 ), ExtResource( 67 ), ExtResource( 23 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 39 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "G2"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 50 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "G3"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 34 ) ]
}

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 1024, 576 )

[sub_resource type="Animation" id=15]
resource_name = "TOff"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 5.09824, 1, 0.258816 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=17]
flags = 4
frames = 2
pause = true
oneshot = true
frame_0/texture = ExtResource( 25 )
frame_0/delay_sec = 0.1
frame_1/texture = ExtResource( 32 )
frame_1/delay_sec = 0.1

[sub_resource type="DynamicFont" id=1]
size = 50
extra_spacing_char = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "text_fade"
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color_shadow")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.3, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.294118, 0.486275, 0.662745, 1 ), Color( 0.392157, 0.564706, 0.729412, 1 ), Color( 0.411765, 0.580392, 0.741176, 1 ), Color( 0.337255, 0.486275, 0.713726, 1 ), Color( 0.298039, 0.447059, 0.670588, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_colors/default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.3, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.392157, 0.564706, 0.729412, 1 ), Color( 0.411765, 0.580392, 0.741176, 1 ), Color( 0.337255, 0.486275, 0.713726, 1 ), Color( 0.298039, 0.447059, 0.670588, 1 ) ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DevUI" type="Node" parent="."]
process_priority = -1

[node name="DevCam" type="Camera2D" parent="DevUI"]
visible = false
scale = Vector2( 2, 2 )
offset = Vector2( 512, 288 )

[node name="ReferenceRect" type="NinePatchRect" parent="DevUI/DevCam"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.5
margin_top = -6.5
margin_right = 19.5
margin_bottom = 19.5
texture = ExtResource( 9 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="DevCamFix" type="CanvasLayer" parent="DevUI/DevCam"]
visible = false

[node name="DCButton" type="CheckButton" parent="DevUI/DevCam/DevCamFix"]
visible = false
margin_left = 10.0
margin_top = 20.0
margin_right = 86.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true
script = ExtResource( 10 )

[node name="Label" type="Label" parent="DevUI/DevCam/DevCamFix/DCButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -23.5
margin_right = 26.0
margin_bottom = -9.5
text = "DEVCAM"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.411765, 0.580392, 0.741176, 1 )

[node name="BGAnim" type="AnimationPlayer" parent="Background"]
root_node = NodePath("../..")
anims/BGAnim = SubResource( 6 )
anims/RESET = SubResource( 7 )
script = ExtResource( 12 )

[node name="UI" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
script = ExtResource( 4 )

[node name="MenuUI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 576.0
margin_bottom = 576.0
script = ExtResource( 6 )

[node name="Mmove_tween" type="Tween" parent="UI/MenuUI"]

[node name="ChooseGameWin" type="Control" parent="UI/MenuUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 80.0
margin_right = -100.0
margin_bottom = -120.0

[node name="GameWin" type="Control" parent="UI/MenuUI/ChooseGameWin"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Flapps" type="Control" parent="UI/MenuUI/ChooseGameWin/GameWin"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GameTitleTexture" type="TextureRect" parent="UI/MenuUI/ChooseGameWin/GameWin/Flapps"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 39 )

[node name="Flapps" type="AnimationPlayer" parent="UI/MenuUI/ChooseGameWin/GameWin/Flapps/GameTitleTexture"]
playback_speed = 12.0
anims/Flapps = SubResource( 10 )

[node name="G2" type="AnimationPlayer" parent="UI/MenuUI/ChooseGameWin/GameWin/Flapps/GameTitleTexture"]
anims/G2 = SubResource( 13 )

[node name="G3" type="AnimationPlayer" parent="UI/MenuUI/ChooseGameWin/GameWin/Flapps/GameTitleTexture"]
anims/G3 = SubResource( 14 )

[node name="Switch" type="Panel" parent="UI/MenuUI/ChooseGameWin"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 11 )
script = ExtResource( 45 )

[node name="TOffTexture" type="TextureRect" parent="UI/MenuUI/ChooseGameWin/Switch"]
modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 24 )

[node name="TOff" type="AnimationPlayer" parent="UI/MenuUI/ChooseGameWin/Switch/TOffTexture"]
anims/TOff = SubResource( 15 )

[node name="ChoosePlayers" type="Button" parent="UI/MenuUI/ChooseGameWin/Switch"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
script = ExtResource( 17 )

[node name="LBut" type="TextureButton" parent="UI/MenuUI/ChooseGameWin/Switch"]
show_behind_parent = true
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 153.0
margin_right = 103.0
margin_bottom = -143.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 35.3846, 40 )
texture_normal = ExtResource( 14 )
script = ExtResource( 18 )

[node name="RBut" type="TextureButton" parent="UI/MenuUI/ChooseGameWin/Switch"]
show_behind_parent = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -34.0
margin_right = -25.0
margin_bottom = 46.0
rect_scale = Vector2( 1.3, 1.3 )
rect_pivot_offset = Vector2( 45.3846, 37.6923 )
texture_normal = ExtResource( 15 )
script = ExtResource( 19 )

[node name="SoundSet" type="CheckButton" parent="UI/MenuUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -99.0
margin_right = 107.0
margin_bottom = -10.999
rect_pivot_offset = Vector2( 48, 45 )
focus_mode = 0
custom_icons/off = ExtResource( 16 )
custom_icons/on_disabled = ExtResource( 11 )
custom_icons/on = ExtResource( 11 )
custom_icons/off_disabled = ExtResource( 16 )
pressed = true
enabled_focus_mode = 0
script = ExtResource( 13 )

[node name="GameList" type="CheckButton" parent="UI/MenuUI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.0
margin_top = -99.0
margin_right = -15.0
margin_bottom = -10.999
rect_pivot_offset = Vector2( 48, 40 )
focus_mode = 0
custom_icons/off = ExtResource( 31 )
custom_icons/on_disabled = ExtResource( 27 )
custom_icons/on = ExtResource( 27 )
custom_icons/off_disabled = ExtResource( 31 )
pressed = true
enabled_focus_mode = 0
script = ExtResource( 29 )

[node name="InfoPop" type="Control" parent="UI/MenuUI"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -375.0
margin_right = 200.0
margin_bottom = -75.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 193, 315 )

[node name="InfoPannel" type="TextureRect" parent="UI/MenuUI/InfoPop"]
modulate = Color( 0.411765, 0.580392, 0.741176, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -99800, 2.5003e+06 )
texture = ExtResource( 33 )

[node name="InfoText" type="RichTextLabel" parent="UI/MenuUI/InfoPop/InfoPannel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -40.0
margin_right = -15.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( -99820, 2.60018e+06 )
custom_fonts/normal_font = SubResource( 16 )
text = "Regular famous game Flappy Bird available to play solo or against friends.
Go for your highest score!"

[node name="InfoPlayers" type="TextureRect" parent="UI/MenuUI/InfoPop"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.0
margin_top = 20.0
margin_right = 175.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -99824, 2.60027e+06 )
texture = ExtResource( 40 )

[node name="InfoBut" type="TextureButton" parent="UI/MenuUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 464.0
margin_top = 477.0
margin_right = -468.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( 47, 39 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
texture_normal = SubResource( 17 )
script = ExtResource( 26 )
__meta__ = {
"_editor_description_": "Information bout Game and Player Count
"
}

[node name="StartUI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="GameTitle" parent="UI/StartUI" instance=ExtResource( 8 )]

[node name="Smove_tween" type="Tween" parent="UI/StartUI"]

[node name="Touch" type="RichTextLabel" parent="UI/StartUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -292.0
margin_top = 162.0
margin_right = 408.0
margin_bottom = 262.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.368301, 0.52549, 0.725163, 1 )
custom_constants/shadow_offset_x = -9
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave] touch screen to continue"
text = " touch screen to continue"

[node name="Fade" type="AnimationPlayer" parent="UI/StartUI"]
root_node = NodePath("../Touch")
playback_default_blend_time = 1.0
anims/RESET = ExtResource( 3 )
anims/text_fade = SubResource( 2 )
script = ExtResource( 1 )

[node name="GameStart" type="Button" parent="UI/StartUI"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
shortcut_in_tooltip = false
action_mode = 0
flat = true

[node name="Audio" type="Node" parent="."]

[node name="StartApp" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 46 )
volume_db = -4.184
pitch_scale = 0.8

[node name="InfoPop" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 47 )

[node name="InfoHide" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 48 )
pitch_scale = 1.3

[node name="BGLoFi" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 51 )
volume_db = -20.0

[node name="SwapGame" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 52 )

[node name="Move" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 56 )
volume_db = -20.0
pitch_scale = 0.9

[node name="Zoom" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 53 )
volume_db = -22.0
pitch_scale = 0.8

[node name="Sel1" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 62 )

[node name="Sel2" type="AudioStreamPlayer" parent="Audio"]
pause_mode = 2
stream = ExtResource( 62 )
pitch_scale = 0.6

[connection signal="toggled" from="DevUI/DevCam/DevCamFix/DCButton" to="DevUI/DevCam/DevCamFix/DCButton" method="_on_DevCam_toggled"]
[connection signal="pressed" from="UI/MenuUI/ChooseGameWin/Switch/ChoosePlayers" to="UI/MenuUI/ChooseGameWin/Switch/ChoosePlayers" method="_on_ChoosePlayers_pressed"]
[connection signal="pressed" from="UI/MenuUI/ChooseGameWin/Switch/LBut" to="UI/MenuUI/ChooseGameWin/Switch/LBut" method="_on_LBut_pressed"]
[connection signal="pressed" from="UI/MenuUI/ChooseGameWin/Switch/RBut" to="UI/MenuUI/ChooseGameWin/Switch/RBut" method="_on_RBut_pressed"]
[connection signal="toggled" from="UI/MenuUI/SoundSet" to="UI/MenuUI/SoundSet" method="_on_SoundSet_toggled"]
[connection signal="toggled" from="UI/MenuUI/GameList" to="UI/MenuUI/GameList" method="_on_GameList_toggled"]
[connection signal="button_down" from="UI/MenuUI/InfoBut" to="UI/MenuUI/InfoBut" method="_on_InfoBut_button_down"]
[connection signal="button_up" from="UI/MenuUI/InfoBut" to="UI/MenuUI/InfoBut" method="_on_InfoBut_button_up"]
[connection signal="pressed" from="UI/StartUI/GameStart" to="UI" method="_on_GameStart_pressed"]
